tests/error/alias_errors/recursive.err
Error: Unsupported (at $FILE:4:0)
  | 
2 | 
3 | 
4 | MyAlias = guppy.type_alias("MyAlias", "MyAlias")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Recursive definitions are not supported

Guppy compilation failed due to 1 previous error
